[gd_scene load_steps=4 format=3 uid="uid://c5em8b0l3jcnd"]

[ext_resource type="Script" uid="uid://bpdyr7d4ea842" path="res://ui/hud/hud.gd" id="1_3y5rg"]
[ext_resource type="FontFile" uid="uid://c2t25ln23jycj" path="res://assets/PublicPixel.ttf" id="2_rlotv"]
[ext_resource type="Theme" uid="uid://cr24qucqw6we" path="res://ui/main_menu.tres" id="3_e0nub"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_3y5rg")

[node name="RoundStats" type="Marker2D" parent="."]
position = Vector2(400, 32)

[node name="Score" type="Label" parent="RoundStats"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_rlotv")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Time" type="Label" parent="RoundStats"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -11.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_rlotv")
theme_override_font_sizes/font_size = 12
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Lifes" type="Marker2D" parent="."]
position = Vector2(32, 32)

[node name="Container" type="HBoxContainer" parent="Lifes"]
offset_right = 64.0
offset_bottom = 32.0
theme_override_constants/separation = 2

[node name="HighScore" type="Label" parent="Lifes"]
offset_top = 32.0
offset_right = 66.0
offset_bottom = 40.0
theme = ExtResource("3_e0nub")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "HIGH-SCORE:"

[node name="HighScoreValue" type="Label" parent="Lifes"]
offset_top = 46.0
offset_right = 127.0
offset_bottom = 58.0
theme = ExtResource("3_e0nub")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1

[node name="PausedOverlay" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.2509804)

[node name="PausedMessage" type="RichTextLabel" parent="PausedOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -49.5
offset_right = 260.0
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_rlotv")
bbcode_enabled = true
text = "[font_size=32]Game Paused[/font_size]

 [pulse]Press P to unpause[/pulse]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathMessage" type="RichTextLabel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -62.0
offset_right = 274.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_rlotv")
bbcode_enabled = true
text = "[font_size=23]You have become [wave][color=\"red\"]dead[/color][/wave][/font_size]

[pulse]Press Enter to try again[/pulse]"
horizontal_alignment = 1
vertical_alignment = 1
